--- a/index.html
+++ b/index.html
@@ -181,7 +181,30 @@
             <a href="https://www.instagram.com/__nazrul_hasan_samy__________h/"><i class="fab fa-instagram"></i></a></center>
           <center> Copyright © 2021 All Rights</center>
       </footer>
+	 <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
 	 
+	 <script>
+//Get the button
+var mybutton = document.getElementById("myBtn");
+
+// When the user scrolls down 20px from the top of the document, show the button
+window.onscroll = function() {scrollFunction()};
+
+function scrollFunction() {
+  if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+    mybutton.style.display = "block";
+  } else {
+    mybutton.style.display = "none";
+  }
+}
+
+// When the user clicks on the button, scroll to the top of the document
+function topFunction() {
+  document.body.scrollTop = 0;
+  document.documentElement.scrollTop = 0;
+}
+</script>
+
 
 
 <!-- JavaScript Bundle with Popper -->
